fix layout bug in OptionAmountListInput; fix DataGrid header end filler cell border style; add DataGrid row hover effect;

--- a/src/_style/theme.css
+++ b/src/_style/theme.css
@@ -134,6 +134,7 @@
 
     --grid-row-seperator-color: #b4b4b4;
     --grid-row-seperator-height: 1px;
+    --grid-row-hover-back-color: #e3f6fc;
 
     /* === scrollbar === */
     --scrollbar-size: 10px;
